<resources>
    <string name="app_name">PizzaOrder</string>
    <string name="action_settings">Settings</string>
    <string name="order">Order</string>
    <string name="cart">Add to Cart</string>
    <string name="qunt">Edit Quantity</string>
    <string name="get_started_label">Place an Order!</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="enter_email_address">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="login">login</string>
    <string name="reister">Sign Up</string>
    <string name="branch_ce_it">ce or it</string>
    <string name="profile_status_active_inactive">active</string>
    <string name="register_me">reg me</string>
    <string name="enter_first_name">Enter Firstname</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="enter_last_name">Enter Lastname</string>
    <string name="enter_email_as_username">Enter E-mail address</string>
</resources>
